--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,8 +3,7 @@
   "rewrites": [
     {
       "source": "/:path(.*)",
-      "destination": "/api/:path*",
-      "permanent": false
+      "destination": "/api/:path*"
     }
   ]
 }
